feat: Enhance workshop detail page with reviews and images sections, and improve service handling logic

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -163,7 +163,6 @@
     "averageRating": "متوسط التقييم",
     "totalBookings": "إجمالي الحجوزات",
     "totalReviews": "إجمالي المراجعات",
-    "reviews": "المراجعات",
     "statistics": "الإحصائيات",
     "contactLocation": "الاتصال والموقع",
     "allWorkshops": "جميع الورش",
@@ -171,7 +170,56 @@
     "notFound": "الورشة غير موجودة أو فشل التحميل.",
     "extractingCoordinates": "استخراج الإحداثيات من الرابط...",
     "coordinatesExtracted": "تم استخراج الإحداثيات بنجاح",
-    "invalidMapsUrl": "رابط خرائط جوجل غير صحيح"
+    "invalidMapsUrl": "رابط خرائط جوجل غير صحيح",
+    "reviews": {
+      "title": "المراجعات",
+      "writeReview": "اكتب مراجعة",
+      "yourRating": "تقييمك",
+      "rating": "التقييم",
+      "ratingRequired": "الرجاء اختيار تقييم",
+      "comment": "التعليق",
+      "commentRequired": "الرجاء كتابة تعليق",
+      "commentPlaceholder": "شارك تجربتك مع هذه الورشة...",
+      "commentPlaceholderAr": "شارك تجربتك مع هذه الورشة...",
+      "submitReview": "إرسال المراجعة",
+      "loadError": "فشل تحميل المراجعات",
+      "noReviews": "لا توجد مراجعات بعد. كن أول من يراجع!",
+      "verified": "عملية موثقة",
+      "verifiedPurchase": "هذه المراجعة من حجز موثق",
+      "verifiedOnly": "الموثقة فقط",
+      "unverified": "غير موثقة",
+      "anonymous": "مستخدم مجهول",
+      "workshopResponse": "رد الورشة",
+      "filterByRating": "تصفية حسب التقييم",
+      "stars": "نجوم",
+      "star": "نجمة",
+      "approvalStatus": "حالة الموافقة",
+      "approved": "موافق عليها",
+      "hidden": "مخفية",
+      "showAll": "عرض الكل",
+      "averageRating": "متوسط التقييم",
+      "basedOn": "بناءً على {{count}} مراجعة",
+      "ratingDistribution": "توزيع التقييمات"
+    },
+    "images": {
+      "title": "الصور",
+      "logo": "الشعار",
+      "gallery": "المعرض",
+      "uploadLogo": "رفع الشعار",
+      "uploadImages": "رفع الصور",
+      "dragDrop": "اسحب وأفلت الملفات هنا، أو انقر للاختيار",
+      "logoHint": "رفع شعار الورشة (موصى به: 200x200 بكسل)",
+      "imagesHint": "رفع حتى {{max}} صور",
+      "maxSize": "الحد الأقصى {{size}} ميجابايت لكل ملف",
+      "uploading": "جاري الرفع...",
+      "invalidType": "نوع ملف غير صالح. يُسمح فقط بـ JPEG و PNG و WebP",
+      "fileTooLarge": "الملف كبير جداً. الحد الأقصى {{size}} ميجابايت",
+      "maxImagesReached": "الحد الأقصى {{max}} صور",
+      "onlyOneLogo": "يمكن رفع شعار واحد فقط في المرة الواحدة",
+      "noImages": "لم يتم رفع أي صور بعد",
+      "deleteImage": "حذف الصورة",
+      "deleteLogo": "حذف الشعار"
+    }
   },
   "cities": {
     "riyadh": "الرياض",
