--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -165,7 +165,6 @@
     "averageRating": "Average Rating",
     "totalBookings": "Total Bookings",
     "totalReviews": "Total Reviews",
-    "reviews": "Reviews",
     "statistics": "Statistics",
     "contactLocation": "Contact & Location",
     "allWorkshops": "All Workshops",
@@ -173,7 +172,56 @@
     "notFound": "Workshop not found or failed to load.",
     "extractingCoordinates": "Extracting coordinates from link...",
     "coordinatesExtracted": "Coordinates extracted successfully",
-    "invalidMapsUrl": "Invalid Google Maps URL"
+    "invalidMapsUrl": "Invalid Google Maps URL",
+    "reviews": {
+      "title": "Reviews",
+      "writeReview": "Write a Review",
+      "yourRating": "Your Rating",
+      "rating": "Rating",
+      "ratingRequired": "Please select a rating",
+      "comment": "Comment",
+      "commentRequired": "Please write a comment",
+      "commentPlaceholder": "Share your experience with this workshop...",
+      "commentPlaceholderAr": "شارك تجربتك مع هذه الورشة...",
+      "submitReview": "Submit Review",
+      "loadError": "Failed to load reviews",
+      "noReviews": "No reviews yet. Be the first to review!",
+      "verified": "Verified Purchase",
+      "verifiedPurchase": "This review is from a verified booking",
+      "verifiedOnly": "Verified Only",
+      "unverified": "Unverified",
+      "anonymous": "Anonymous User",
+      "workshopResponse": "Workshop Response",
+      "filterByRating": "Filter by Rating",
+      "stars": "Stars",
+      "star": "Star",
+      "approvalStatus": "Approval Status",
+      "approved": "Approved",
+      "hidden": "Hidden",
+      "showAll": "Show All",
+      "averageRating": "Average Rating",
+      "basedOn": "based on {{count}} reviews",
+      "ratingDistribution": "Rating Distribution"
+    },
+    "images": {
+      "title": "Images",
+      "logo": "Logo",
+      "gallery": "Gallery",
+      "uploadLogo": "Upload Logo",
+      "uploadImages": "Upload Images",
+      "dragDrop": "Drag and drop files here, or click to select",
+      "logoHint": "Upload workshop logo (recommended: 200x200px)",
+      "imagesHint": "Upload up to {{max}} images",
+      "maxSize": "Max {{size}}MB per file",
+      "uploading": "Uploading...",
+      "invalidType": "Invalid file type. Only JPEG, PNG, and WebP are allowed",
+      "fileTooLarge": "File is too large. Maximum size is {{size}}MB",
+      "maxImagesReached": "Maximum {{max}} images allowed",
+      "onlyOneLogo": "Only one logo can be uploaded at a time",
+      "noImages": "No images uploaded yet",
+      "deleteImage": "Delete Image",
+      "deleteLogo": "Delete Logo"
+    }
   },
   "cities": {
     "riyadh": "Riyadh",
