feat(feedback): add real-time messaging using Socket.io for complaints and suggestions system

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -681,6 +681,7 @@
     "sendReply": "إرسال الرد",
     "replyPlaceholder": "اكتب ردك هنا...",
     "noReplies": "لا توجد ردود حتى الآن.",
+    "closedError": "لا يمكن الرد على شكوى مغلقة.",
     "searchPlaceholder": "بحث في الموضوع أو الرسالة...",
     "allStatuses": "جميع الحالات",
     "allTypes": "جميع الأنواع",
