--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -33,6 +33,7 @@
     "details": "التفاصيل",
     "total": "الإجمالي",
     "all": "الكل",
+    "viewAll": "عرض الكل",
     "yourAccount": "حسابك",
     "managePlatformUsers": "إدارة مستخدمي المنصة",
     "rolesAndAccess": "الأدوار والتحكم بالوصول",
@@ -111,6 +112,7 @@
     "mobileCarService": "خدمة الورش المتنقلة",
     "products": "المنتجات",
     "vendors": "الموردون",
+    "vendorRequests": "طلبات الموردين",
     "technicians": "الفنيون",
     "reports": "التقارير",
     "settings": "الإعدادات",
@@ -271,6 +273,7 @@
   "users": {
     "title": "المستخدمين",
     "addUser": "إضافة مستخدم",
+    "editUser": "تعديل مستخدم",
     "searchUsers": "البحث عن مستخدمين...",
     "name": "الاسم",
     "email": "البريد الإلكتروني",
@@ -467,7 +470,25 @@
     "noVendors": "لا يوجد موردين",
     "business": "اسم العمل",
     "contact": "جهة الاتصال",
-    "stats": "الإحصائيات"
+    "stats": "الإحصائيات",
+    "onboardingTitle": "طلبات تسجيل الموردين",
+    "onboardingSubtitle": "مراجعة وإدارة طلبات الموردين الجدد",
+    "requestDetails": "تفاصيل طلب التسجيل",
+    "company": "الشركة",
+    "mainService": "الخدمة الرئيسية",
+    "legalName": "الاسم القانوني",
+    "supplierType": "نوع المورد",
+    "locationInfo": "بيانات التسجيل والموقع",
+    "crNumber": "رقم السجل التجاري",
+    "vatNumber": "الرقم الضريبي",
+    "address": "العنوان",
+    "contactPerson": "الشخص المسؤول",
+    "serviceCapacity": "الخدمات والقدرة الاستيعابية",
+    "experience": "الخبرة",
+    "fleet": "الأسطول",
+    "servicesOffered": "الخدمات المقدمة",
+    "employeesBand": "نطاق الموظفين",
+    "monthlyCapacity": "القدرة الشهرية"
   },
   "notifications": {
     "title": "الإشعارات",
@@ -475,7 +496,13 @@
     "markAllRead": "تحديد الكل كمقروء",
     "noNotifications": "لا توجد إشعارات بعد",
     "notification": "الإشعار",
-    "markRead": "تحديد كمقروء"
+    "markRead": "تحديد كمقروء",
+    "youHaveUnread": "لديك {{count}} إشعارات جديدة",
+    "allCaughtUp": "لا توجد إشعارات غير مقروءة",
+    "seeAllHistory": "مشاهدة سجل الإشعارات",
+    "newNotification": "إشعار جديد",
+    "myNotifications": "تنبيهاتي",
+    "systemArchive": "سجل إشعارات النظام"
   },
   "activity": {
     "title": "سجل النشاط",
