--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,6 +35,7 @@
     "details": "Details",
     "total": "Total",
     "all": "All",
+    "viewAll": "View All",
     "yourAccount": "Your account",
     "managePlatformUsers": "Manage platform users",
     "rolesAndAccess": "Roles and access control",
@@ -113,6 +114,7 @@
     "mobileCarService": "Mobile Car Service",
     "products": "Products",
     "vendors": "Vendors",
+    "vendorRequests": "Vendor Requests",
     "technicians": "Technicians",
     "reports": "Reports",
     "settings": "Settings",
@@ -272,6 +274,7 @@
   "users": {
     "title": "Users",
     "addUser": "Add User",
+    "editUser": "Edit User",
     "searchUsers": "Search users...",
     "name": "Name",
     "email": "Email",
@@ -468,7 +471,25 @@
     "noVendors": "No vendors found",
     "business": "Business",
     "contact": "Contact",
-    "stats": "Stats"
+    "stats": "Stats",
+    "onboardingTitle": "Vendor Registration Requests",
+    "onboardingSubtitle": "Review and manage new vendor applications",
+    "requestDetails": "Vendor Registration Details",
+    "company": "Company",
+    "mainService": "Main Service",
+    "legalName": "Legal Name",
+    "supplierType": "Supplier Type",
+    "locationInfo": "Registration & Location",
+    "crNumber": "CR Number",
+    "vatNumber": "VAT Number",
+    "address": "Address",
+    "contactPerson": "Contact Person",
+    "serviceCapacity": "Service & Capacity",
+    "experience": "Experience",
+    "fleet": "Fleet",
+    "servicesOffered": "Services Offered",
+    "employeesBand": "Employees Band",
+    "monthlyCapacity": "Monthly Capacity"
   },
   "notifications": {
     "title": "Notifications",
@@ -476,7 +497,13 @@
     "markAllRead": "Mark all as read",
     "noNotifications": "No notifications yet",
     "notification": "Notification",
-    "markRead": "Mark as read"
+    "markRead": "Mark as read",
+    "youHaveUnread": "You have {{count}} unread notifications",
+    "allCaughtUp": "You're all caught up",
+    "seeAllHistory": "See notification history",
+    "newNotification": "New Notification",
+    "myNotifications": "My Feed",
+    "systemArchive": "System Logs"
   },
   "activity": {
     "title": "Activity & Logs",
