--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -106,6 +106,7 @@
   "nav": {
     "dashboard": "لوحة التحكم",
     "analytics": "التحليلات",
+    "myVendorDetail": "صفحة تفاصيل متجري",
     "users": "المستخدمون",
     "bookings": "الحجوزات",
     "services": "الخدمات",
